# plasma-dragon-monitor

./: .gitignore  CMakeLists.txt  README.md  blueprint.md  metadata.json
contents/config/: main.xml
contents/ui/: CompactView.qml  ConfigGeneral.qml  DragonCharacter.qml  ExpandedView.qml  SpeechBubble.qml  StateEngine.qml  main.qml
docs/: aporia_review.md  checklist.md  spec.md
